--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/Alexandrshy/Scraping"
   },
   "scripts": {
     "eslint": "eslint ./ --color --ext .js",
     "eslint-fix": "yarn eslint --fix",
     "clean": "rimraf dist",
     "build": "npm run clean && babel ./src --out-dir dist",
-    "start": "npm run build && node ./dist/index.js"
+    "scraping": "npm run build && node ./dist/cli/scraping.js",
+    "validation": "npm run build && node ./dist/cli/userValidation.js",
+    "format": "npm run build && node ./dist/cli/formatPersonData.js"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
