--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "eslint-plugin-flowtype": "^4.3.0",
+    "eslint-plugin-react": "^7.15.1",
     "minimist": "^1.2.0",
     "prettier": "1.18.2",
     "puppeteer": "^1.20.0",
